--- a/src/app/components/delivery.component.html
+++ b/src/app/components/delivery.component.html
@@ -28,15 +28,15 @@
       <tr>
         <td>Session:</td>
         <td>
-          AM <input type="radio" name="session" value="AM">
-          PM <input type="radio" name="session" value="PM">
+          AM <input type="radio" name="session" value="AM" formControlName="session">
+          PM <input type="radio" name="session" value="PM" formControlName="session">
         </td>
       </tr>
       <tr>
         <td>Options:</td>
         <td>
-          Insurance <input type="checkbox" value="insurance">
-          Priority <input type="checkbox" value="priority">
+          Insurance <input type="checkbox" formControlName="insurance">
+          Priority <input type="checkbox" formControlName="priority">
         </td>
       </tr>
       <tr>
