--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
 <h1>Delivery Order</h1>
 
-<app-delivery></app-delivery>
+<app-delivery (onNewDeliveryOrder)="processNewOrder($event)"></app-delivery>
+
+<hr>
+
+<div>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Address</th>
+        <th>Delivery Date</th>
+        <th>Priority</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let o of orders">
+        <td>
+          {{ o.name | titlecase }}
+        </td>
+        <td>{{ o.address }}</td>
+        <td>{{ o.deliveryDate | date }}</td>
+        <td>{{ o.priority }}</td>
+        <td>
+          <button>X</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
