--- a/src/app/components/delivery.component.html
+++ b/src/app/components/delivery.component.html
@@ -1,16 +1,22 @@
-<form [formGroup]="form" (ngSubmit)="processDelivery()">
+<form [formGroup]="doForm" (ngSubmit)="processDelivery()">
 
     <table>
       <tr>
         <td>Name:</td>
         <td>
           <input type="text" size="30" formControlName="name">
+          <span *ngIf="hasError('name')">
+            Please enter your name
+          </span>
         </td>
       </tr>
       <tr>
         <td>Address:</td>
         <td>
           <input type="text" size="30" formControlName="address">
+          <span *ngIf="hasError('address')">
+            Please enter your address
+          </span>
         </td>
       </tr>
       <tr>
@@ -28,7 +34,7 @@
       <tr>
         <td>Session:</td>
         <td>
-          AM <input type="radio" name="session" value="AM" formControlName="session">
+          AM <input type="radio" value="AM" formControlName="session">
           PM <input type="radio" name="session" value="PM" formControlName="session">
         </td>
       </tr>
@@ -36,7 +42,7 @@
         <td>Options:</td>
         <td>
           Insurance <input type="checkbox" formControlName="insurance">
-          Priority <input type="checkbox" formControlName="priority">
+          Priority <input type="checkbox" [formControlName]="priorityCtrlName">
         </td>
       </tr>
       <tr>
@@ -45,12 +51,49 @@
           <textarea cols="30" rows="3" formControlName="comments"></textarea>
         </td>
       </tr>
+      <!--
       <tr>
         <td></td>
         <td>
-          <button type="submit">Place Order</button>
+          <p>
+            Invalid: {{ doForm.invalid }}, Valid: {{ doForm.valid }}
+          </p>
+          <p>
+            Pristine: {{ doForm.pristine }}, Dirty: {{ doForm.dirty }}
+          </p>
+        </td>
+      </tr>
+    -->
+      <tr>
+        <td></td>
+        <td>
+          <button type="submit" [disabled]="isFormInvalid()">
+            Place Order
+          </button>
+          <button type="button" (click)="addItem()">Add Item</button>
         </td>
       </tr>
     </table>
   
+    <div *ngIf="itemArray.length > 0; else noItems">
+      <h2>Items</h2>
+      <table formArrayName="orderItems">
+        <tr *ngFor="let it of itemArray.controls; let i = index" [formGroupName]="i">
+          <td>
+            <input type="text" size="30" placeholder="Item" formControlName="item">
+          </td>
+          <td>
+            <input type="number" size="5" placeholder="Quantity" formControlName="quantity">
+          </td>
+          <td>
+            <button (click)="deleteItem(i)">X</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  
   </form>
+  
+  <ng-template #noItems>
+    <h2> Your order has no items </h2>
+  </ng-template>
